--- a/dotfiles/ai-agents/codex/config.toml
+++ b/dotfiles/ai-agents/codex/config.toml
@@ -1,21 +1,30 @@
-approval_policy = "never"
-model = "gpt-5.2-codex"
+model = "gpt-5.3-codex"
+model_verbosity = "medium"
 preferred_auth_method = "apikey"
+approval_policy = "on-request"
 sandbox_mode = "workspace-write"
-model_reasoning_effort = "medium"
+model_reasoning_effort = "high"
+web_search = "live"
+suppress_unstable_features_warning = true
 
 [sandbox_workspace_write]
 network_access = true
 
-[notice]
-hide_gpt5_1_migration_prompt = true
-"hide_gpt-5.1-codex-max_migration_prompt" = true
-
-[notice.model_migrations]
-"gpt-5.1-codex" = "gpt-5.2-codex"
-
 [features]
+skills = true
 unified_exec = true
 shell_snapshot = true
-steer = true
 collab = true
+steer = true
+collaboration_modes = true
+apps = true
+personality = true
+
+# MCP Tools
+[mcp_servers.context7]
+command = "npx"
+args = ["-y", "@upstash/context7-mcp@latest"]
+
+[mcp_servers.chrome]
+command = "npx"
+args = ["chrome-devtools-mcp@latest"]
