chore(config): switch context7 to bunx and disable chrome
standardizes tool runner for context7 to bunx
disables unused chrome config and adds codex_apps toggle

--- a/dotfiles/ai-agents/codex/config.toml
+++ b/dotfiles/ai-agents/codex/config.toml
@@ -21,10 +21,13 @@ apps = true
 personality = true
 
 # MCP Tools
+[mcp_servers.codex_apps]
+enabled = false
+
 [mcp_servers.context7]
-command = "npx"
+command = "bunx"
 args = ["-y", "@upstash/context7-mcp@latest"]
 
-[mcp_servers.chrome]
-command = "npx"
-args = ["chrome-devtools-mcp@latest"]
+# [mcp_servers.chrome]
+# command = "bunx"
+# args = ["chrome-devtools-mcp@latest"]
