Replace 'collab' feature with 'multi_agent'

--- a/dotfiles/ai-agents/codex/config.toml
+++ b/dotfiles/ai-agents/codex/config.toml
@@ -17,7 +17,7 @@ network_access = true
 skills = true
 unified_exec = true
 shell_snapshot = true
-collab = true
+multi_agent = true
 steer = true
 collaboration_modes = true
 apps = true
