--- a/dotfiles/ai-agents/codex/config.toml
+++ b/dotfiles/ai-agents/codex/config.toml
@@ -1,27 +1,36 @@
 ############################################################
-# MODEL SELECTION
+# MODEL
 ############################################################
 
 model = "gpt-5.2-codex"
 preferred_auth_method = "apikey"
 
-# Reduce reasoning and verbosity to lower token usage
-model_reasoning_effort = "low"     # was "medium"
-model_verbosity = "low"            # was "medium"
+# Reduce internal reasoning + output size
+model_reasoning_effort = "low"
+model_verbosity = "low"
 
 
 ############################################################
-# COST CONTROL – PRIMARY TOKEN LEVERS
+# COST CONTROL (PRIMARY LEVERS)
 ############################################################
 
-# Hard cap for tool outputs (default ~10000, too high)
+# Cap tool output retained in history (default ~10000)
 tool_output_token_limit = 3000
 
-# Limit AGENTS.md / project instruction overhead
-project_doc_max_bytes = 12288      # was implicit 32768 default
+# Limit AGENTS.md + project instruction overhead (default 32768)
+project_doc_max_bytes = 12288
 
-# Disable live web search by default (major cost amplifier)
-web_search = "disabled"            # was "live"
+# Disable automatic web search (enable manually via --search)
+web_search = "disabled"
+
+
+############################################################
+# RETRY / STREAM CONTROL (PREVENT HIDDEN TOKEN MULTIPLIERS)
+############################################################
+
+request_max_retries = 1
+stream_max_retries = 1
+stream_idle_timeout_ms = 120000
 
 
 ############################################################
@@ -46,25 +55,24 @@ hide_full_access_warning = true
 
 
 ############################################################
-# FEATURE FLAGS (Capability vs Cost Tradeoff)
+# FEATURES (BALANCED CAPABILITY MODE)
 ############################################################
 
 [features]
 
-# Keep essential dev productivity
 skills = true
 unified_exec = true
 shell_snapshot = true
 
-# Advanced features – enable only if needed
-multi_agent = true          # consider disabling if not required
-steer = true
-collaboration_modes = true
-apps = true
-personality = true
-
-# Disable search tool since web_search is disabled
+# Keep advanced steering but avoid drift multipliers
+multi_agent = false
 search_tool = false
+apps = false
+personality = false
+collaboration_modes = false
+steer = true
+
+use_linux_sandbox_bwrap = true
 
 
 ############################################################
@@ -74,8 +82,20 @@ search_tool = false
 [mcp_servers.context7]
 command = "bunx"
 args = ["-y", "@upstash/context7-mcp@latest"]
+startup_timeout_sec = 10
+tool_timeout_sec = 30
 
-# Optional Chrome MCP
+# Optional Chrome DevTools MCP (disabled by default)
+# Enable only when browser automation is required.
 # [mcp_servers.chrome]
 # command = "bunx"
 # args = ["chrome-devtools-mcp@latest"]
+# startup_timeout_sec = 10
+# tool_timeout_sec = 30
+
+
+############################################################
+# LOGGING
+############################################################
+
+log_dir = "~/.codex/logs"
