feat(workflows): update paths for SKILL.md and script files in CI configurations

--- a/.github/workflows/check-skills.yml
+++ b/.github/workflows/check-skills.yml
@@ -2,7 +2,13 @@ name: "Check SKILL.md frontmatter"
 
 on:
   push:
+    paths:
+      - "dotfiles/ai-agents/**/SKILL.md"
+      - ".github/scripts/validate_frontmatter.py"
   pull_request:
+    paths:
+      - "dotfiles/ai-agents/**/SKILL.md"
+      - ".github/scripts/validate_frontmatter.py"
 
 jobs:
   validate-frontmatter:
