--- a/.github/workflows/dotfiles-ci.yml
+++ b/.github/workflows/dotfiles-ci.yml
@@ -2,9 +2,23 @@ name: dotfiles-ci
 
 on:
   pull_request:
+    paths:
+      - "install.sh"
+      - "add-dotfile.sh"
+      - "install.ps1"
+      - "add-dotfile.ps1"
+      - "dotfiles.map.json"
+      - ".github/scripts/**"
   push:
     branches:
       - main
+    paths:
+      - "install.sh"
+      - "add-dotfile.sh"
+      - "install.ps1"
+      - "add-dotfile.ps1"
+      - "dotfiles.map.json"
+      - ".github/scripts/**"
   workflow_dispatch:
 
 jobs:
